done comment and review quote